# misurazione-del-tempo-di-reazione-di-una-persona-vecchio

./: README.md
ReactionSpeed/: CMakeLists.txt  LightCanvas.qml  Main.qml  main.cpp  mainlogic.cpp  mainlogic.h  mainlogicworker.cpp  mainlogicworker.h
ReactionSpeed/Basic/: CMakeLists.txt  SSpinBox.qml  SText.qml
